{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 217,
  "lineage": "09732677-bd67-0211-b148-8c553d96c9c3",
  "resources": [
    {
      "module": "module.mqu-customers",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "customers-microservices/ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ingress",
                "namespace": "customers-microservices",
                "resource_version": "76221",
                "uid": "2765920c-4939-4232-a347-f148bd660c5c"
              }
            ],
            "spec": [
              {
                "backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "marty-mcfly.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "customers",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/starlighter/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mqu-customers.kubernetes_pod.customers",
            "module.mqu-customers.kubernetes_service.customers",
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-customers",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "customers_microservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "customers-microservices",
            "metadata": [
              {
                "generation": 0,
                "name": "customers-microservices",
                "resource_version": "50011",
                "uid": "41de681c-2922-470c-9f4d-22dc9d71b8b4"
              }
            ]
          },
          "dependencies": [
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-customers",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "customers",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "customers-microservices/customers",
            "metadata": [
              {
                "generation": 0,
                "name": "customers",
                "namespace": "customers-microservices",
                "resource_version": "50061",
                "uid": "8078279b-f496-4034-9c79-121ec662ccd6"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.154.157",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "CustomersMicroservice"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.mqu-customers.kubernetes_pod.customers",
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-kafka",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "emmet-brown",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "emmet-brown",
            "metadata": [
              {
                "generation": 0,
                "name": "emmet-brown",
                "resource_version": "706",
                "uid": "469888c0-53fb-455f-b9d0-77f52a6bb332"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.mqu-memberships",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "memberships-microservices/ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ingress",
                "namespace": "memberships-microservices",
                "resource_version": "76218",
                "uid": "5c996bad-ebaa-4737-90b9-37aef9362cbc"
              }
            ],
            "spec": [
              {
                "backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "marty-mcfly.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "memberships",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/strickland/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown",
            "module.mqu-memberships.kubernetes_pod.memberships",
            "module.mqu-memberships.kubernetes_service.memberships"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-memberships",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "memberships_microservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "memberships-microservices",
            "metadata": [
              {
                "generation": 0,
                "name": "memberships-microservices",
                "resource_version": "50012",
                "uid": "26902ba6-6184-4ceb-b1bf-4270e6150d67"
              }
            ]
          },
          "dependencies": [
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-memberships",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "memberships",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "memberships-microservices/memberships",
            "metadata": [
              {
                "generation": 0,
                "name": "memberships",
                "namespace": "memberships-microservices",
                "resource_version": "50072",
                "uid": "6a9211d9-ad02-47eb-90c8-bd165cb11aed"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.113.163",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "membershipsMicroservice"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.mqu-kafka.kubernetes_namespace.emmet-brown",
            "module.mqu-memberships.kubernetes_pod.memberships",
            "module.mqu-kafka.helm_release.bitnami_kafka"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-nginx",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "sherman-peabody",
            "metadata": [
              {
                "generation": 0,
                "name": "sherman-peabody",
                "resource_version": "79523",
                "uid": "24d10e3f-a47a-45d5-9035-c32b412d4ecb"
              }
            ]
          },
          "dependencies": [
            "module.mqu-customers.kubernetes_namespace.customers_microservices",
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-memberships.kubernetes_pod.memberships",
            "module.mqu-timelines.kubernetes_namespace.timelines_microservices",
            "module.mqu-customers.kubernetes_pod.customers",
            "module.mqu-customers.kubernetes_service.customers",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown",
            "module.mqu-memberships.kubernetes_namespace.memberships_microservices",
            "module.mqu-customers.kubernetes_ingress.ingress",
            "module.mqu-memberships.kubernetes_ingress.ingress",
            "module.mqu-timelines.kubernetes_pod.timelines",
            "module.mqu-memberships.kubernetes_service.memberships",
            "module.mqu-timelines.kubernetes_ingress.ingress",
            "module.mqu-timelines.kubernetes_service.timelines"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-timelines",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "timelines-microservices/ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ingress",
                "namespace": "timelines-microservices",
                "resource_version": "76219",
                "uid": "950bf929-eb07-41b6-84bf-bbf4e9799ac6"
              }
            ],
            "spec": [
              {
                "backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "marty-mcfly.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "timelines",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/clocktower/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": false
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown",
            "module.mqu-timelines.kubernetes_pod.timelines",
            "module.mqu-timelines.kubernetes_service.timelines"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-timelines",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "timelines_microservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "timelines-microservices",
            "metadata": [
              {
                "generation": 0,
                "name": "timelines-microservices",
                "resource_version": "65004",
                "uid": "e9649f85-838d-478f-bab4-8ea67136c989"
              }
            ]
          },
          "dependencies": [
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown"
          ]
        }
      ]
    },
    {
      "module": "module.mqu-timelines",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "timelines",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "timelines-microservices/timelines",
            "metadata": [
              {
                "generation": 0,
                "name": "timelines",
                "namespace": "timelines-microservices",
                "resource_version": "65086",
                "uid": "1d281a59-9d62-47e8-9fe6-a9388daf9a29"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.43.131.29",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "timelinesMicroservice"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.mqu-kafka.helm_release.bitnami_kafka",
            "module.mqu-kafka.kubernetes_namespace.emmet-brown",
            "module.mqu-timelines.kubernetes_pod.timelines"
          ]
        }
      ]
    }
  ]
}